# audio-visualizer-python

./: .core.py.swp  .gitignore  .main.py.swo  .main.py.swp  .main.ui.swp  .preview_thread.py.swp  .video_thread.py.swp  AUTHORS  LICENSE  MANIFEST  MANIFEST.in  README.md  asd  avp.desktop  command.py  core.py  encoder-options.json  freeze.py  main.py  main.ui  mainwindow.py  mainwindow.ui  presetmanager.py  presetmanager.ui  preview_thread.py  pyproject.toml  requirements.txt  setup.py  test.mkv  video_thread.py
.github/workflows/: python-app.yml
avpython/: core.py  main.py  preview_thread.py  video_thread.py
com.github.djfun.AudioVisualizer/: com.github.djfun.AudioVisualizer.appdata.xml  com.github.djfun.AudioVisualizer.desktop  com.github.djfun.AudioVisualizer.json
components/: __base__.py  color.py  color.ui  image.py  image.ui  original.py  original.ui  text.py  text.ui  video.py  video.ui
src/: __init__.py  __main__.py  command.py  component.py  core.py  encoder-options.json  frame.py  main.py  mainwindow.py  mainwindow.ui  presetmanager.py  preview_thread.py  preview_win.py  toolkit.py  video_thread.py
src/avp/: __init__.py  __main__.py  cli.py  command.py  component.py  core.py  video_thread.py
src/avp/components/: classic.py  classic.ui  color.py  color.ui  image.py  image.ui  life.py  life.ui  original.py  original.ui  sound.py  spectrum.py  spectrum.ui  text.py  text.ui  trails.py  trails.ui  video.py  video.ui  waveform.py  waveform.ui
src/avp/gui/: actions.py  mainwindow.py  presetmanager.py  preview_thread.py  preview_win.py  (+1 more)
src/components/: __base__.py  __template__.ui  color.py  color.ui  image.py  image.ui  life.py  life.ui  original.py  original.ui  sound.py  sound.ui  spectrum.py  spectrum.ui  text.py  text.ui  video.py  video.ui  waveform.py  waveform.ui
src/gui/: actions.py  mainwindow.py  mainwindow.ui  presetmanager.py  preview_thread.py  preview_win.py
src/tests/: __init__.py  test_commandline_export.py  test_commandline_parser.py  test_core_init.py  test_export_classic.py
src/toolkit/: __init__.py  common.py  core.py  ffmpeg.py  frame.py
tests/: __init__.py  test_classic_visualizer.py  test_commandline_export.py  test_commandline_parser.py  test_comp_classic.py  test_comp_color.py  test_comp_image.py  test_comp_life.py  test_comp_original.py  test_comp_spectrum.py  test_comp_text.py  test_comp_waveform.py  test_core_init.py  test_image_comp.py  test_mainwindow_comp_actions.py  test_mainwindow_list_actions.py  test_mainwindow_projects.py  test_mainwindow_undostack.py  test_text_comp.py  test_toolkit_common.py  test_toolkit_ffmpeg.py  test_toolkit_frame.py  test_version.py
(+11 files in other folders)
