[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[project]
name = "audio-visualizer-python"
description = "Create audio visualization videos from a GUI or commandline"
version = "2.1.1"
requires-python = ">= 3.12"
license = "MIT"
classifiers=[
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Multimedia :: Video :: Non-Linear Editor",
]
keywords = [
  "visualizer",
  "visualization",
  "commandline video",
  "video editor",
  "ffmpeg",
  "podcast",
]
authors = [
  {name = "Martin Kaistra", email = "admin@djfun.de"},
  {name = "Brianna Rainey", email = "rutachigal@gmail.com"},
  {name = "DH4", email = "wayne@bitstorm.pw"},
  {name = "HunterwolfAT", email = "hunterwolf0815@gmail.com"},
  {name = "rikai"},
]
dependencies = [
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "pyqt6>=6.10.2",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-qt",
]

[tool.uv.build-backend]
module-name = "avp"

[external]
dependencies = ["pkg:generic/ffmpeg"]

[project.urls]
repository="https://github.com/djfun/audio-visualizer-python"

[project.scripts]
avp = "avp.cli:main"
