[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[project]
name = "audio-visualizer-python"
description = "Create audio visualization videos from a GUI or commandline"
readme = "README.md"
version = "2.2.3"
requires-python = ">= 3.12"
license = "MIT"
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Multimedia :: Video",
]
keywords = [
  "visualizer",
  "visualization",
  "fft",
  "ffmpeg",
  "podcast",
]
authors = [
  {name = "Martin Kaistra", email = "admin@djfun.de"},
  {name = "Brianna Rainey", email = "brianna@tassaron.com"},
  {name = "DH4", email = "wayne@bitstorm.pw"},
  {name = "HunterwolfAT", email = "hunterwolf0815@gmail.com"},
  {name = "rikai"},
]
maintainers = [
  {name = "Brianna Rainey", email = "brianna@tassaron.com"},
]
dependencies = [
  "numpy>=2.4.1",
  "pillow>=12.1.0",
  "pyqt6>=6.10.2",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-qt",
]

[tool.uv.build-backend]
module-name = "avp"

[external]
dependencies = ["pkg:generic/ffmpeg"]

[project.urls]
repository="https://github.com/djfun/audio-visualizer-python"

[project.scripts]
avp = "avp.cli:main"
